--- a/NeuralGasDotNet/MainWindow.xaml
+++ b/NeuralGasDotNet/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
         d:DesignHeight="800" d:DesignWidth="800" d:DataContext="{d:DesignInstance local:MainWindow}"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="800" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -21,10 +21,10 @@
                 <wpf:ScatterSeries Title="Series A" Values="{Binding ValuesA}" />
                 <wpf:ScatterSeries Title="Series B" Values="{Binding ValuesB}"
                                    PointGeometry="{x:Static wpf:DefaultGeometries.Diamond}" />
-                <wpf:LineSeries Values="{Binding ValuesA}" StrokeThickness="4" StrokeDashArray="2" 
+                <!--<wpf:LineSeries Values="{Binding ValuesA}" StrokeThickness="4" StrokeDashArray="2" 
                                 Stroke="#6BBA45" Fill="Transparent" LineSmoothness="0" PointGeometrySize="20"
                                 PointGeometry="{x:Static wpf:DefaultGeometries.Diamond}" 
-                                PointForeground="#6BBA45"/>
+                                PointForeground="#6BBA45"/>-->
 
             </wpf:CartesianChart.Series>
             <wpf:CartesianChart.AxisY>
