--- a/NeuralGasDotNet/Views/MainWindow.xaml
+++ b/NeuralGasDotNet/Views/MainWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="NeuralGasDotNet.MainWindow"
+﻿<Window x:Class="NeuralGasDotNet.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NeuralGasDotNet"
         xmlns:wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         WindowState="Maximized"
         WindowStyle="ThreeDBorderWindow"
         mc:Ignorable="d"
-        d:DesignHeight="800" d:DesignWidth="800" d:DataContext="{d:DesignInstance local:MainWindow}"
+        d:DesignHeight="800" d:DesignWidth="800"
         Title="MainWindow">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
@@ -20,9 +20,10 @@
             <ColumnDefinition Width="4*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button Grid.Row="0" Grid.Column="0" Margin="0, 10, 0, 0" HorizontalAlignment="Center" Width="500" Click="ButtonBase_OnClick">Запустить тренировку нейросети</Button>
-        <Button Grid.Row="1"  Grid.Column="0" Margin="0, 10, 0, 0"  Width="500" HorizontalAlignment="Center" Click="ButtonBase_OnClick2">Отобразить веса</Button>
+        <Button Grid.Row="0" Grid.Column="0" Margin="0, 10, 0, 0" HorizontalAlignment="Center" Width="500" Command="{Binding ShowDataCommand}" CommandParameter="{Binding ElementName=InputDataType, Path=SelectedIndex}">Отобразить входные данные</Button>
+        <Button Grid.Row="1"  Grid.Column="0" Margin="0, 10, 0, 0"  Width="500" HorizontalAlignment="Center" Command="{Binding StartTrainingCommand}">Начать обучение нейросети</Button>
         <ComboBox
+            Name="InputDataType"
             HorizontalAlignment="Center"
             Margin="10,10,0,0"
             Grid.Column="1"
