--- a/NeuralGasDotNet/Views/MainWindow.xaml
+++ b/NeuralGasDotNet/Views/MainWindow.xaml
@@ -4,11 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
+        xmlns:styleAlias="clr-namespace:NeuralGasDotNet.Services"
         WindowState="Maximized"
         WindowStyle="ThreeDBorderWindow"
         mc:Ignorable="d"
         d:DesignHeight="800" d:DesignWidth="800"
         Title="MainWindow">
+    <Window.Resources>
+        <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues"
+                            ObjectType="{x:Type system:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="styleAlias:DataGenerators"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -20,7 +30,7 @@
             <ColumnDefinition Width="4*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button Grid.Row="0" Grid.Column="0" Margin="0, 10, 0, 0" HorizontalAlignment="Center" Width="500" Command="{Binding ShowDataCommand}" CommandParameter="{Binding ElementName=InputDataType, Path=SelectedIndex}">Отобразить входные данные</Button>
+        <Button Grid.Row="0" Grid.Column="0" Margin="0, 10, 0, 0" HorizontalAlignment="Center" Width="500" Command="{Binding ShowDataCommand}" CommandParameter="{Binding ElementName=InputDataType, Path=SelectedItem}">Отобразить входные данные</Button>
         <Button Grid.Row="1"  Grid.Column="0" Margin="0, 10, 0, 0"  Width="500" HorizontalAlignment="Center" Command="{Binding StartTrainingCommand}">Начать обучение нейросети</Button>
         <ComboBox
             Name="InputDataType"
@@ -29,7 +39,8 @@
             Grid.Column="1"
             SelectedIndex="0"
             Grid.Row="0"
-            ItemsSource="{Binding Data}"
+            ItemsSource="{Binding Source={StaticResource dataFromEnum}}"
+            SelectedItem="{Binding Path=CurrentEffectStyle}"
             VerticalAlignment="Top"
             Width="150"
             />
@@ -68,11 +79,13 @@
         </Grid>
         <TextBlock Grid.Row="2" Grid.Column="0" Margin="15, 10, 5, 0" Visibility="{Binding TextBlockVisibility}" Text="{Binding TextBlockText}" />
 
-        <wpf:CartesianChart Visibility="{Binding GraphVisibility}" Grid.Row="2" Grid.Column="0" LegendLocation="None" Series="{Binding SeriesCollection}" Margin="0,0,10,0">
+        <wpf:CartesianChart Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" LegendLocation="None" Series="{Binding SeriesChartsCollection}" Margin="0,0,10,0">
             <wpf:CartesianChart.AxisY>
                 <!--setting the axis unit improved the labels rounding rule-->
                 <wpf:Axis Unit="1"></wpf:Axis>
             </wpf:CartesianChart.AxisY>
         </wpf:CartesianChart>
+        <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding NeuralNetworkLog}"/>
+
     </Grid>
 </Window>
