--- a/NeuralGasDotNet/App.xaml
+++ b/NeuralGasDotNet/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="NeuralGasDotNet.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:NeuralGasDotNet"
-             StartupUri="MainWindow.xaml">
+<Application x:Class="NeuralGasDotNet.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:NeuralGasDotNet"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d"
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Application.Resources>
-         
+        <ResourceDictionary />
     </Application.Resources>
 </Application>
